[project]
name = "dicomplete"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "ipykernel>=6.29.2",
    "transformers>=4.37.2",
    "torch>=2.2.0",
    "tqdm>=4.66.2",
    "mojimoji>=0.0.13",
    "pytorch-lightning>=2.2.0.post0",
    "sentencepiece>=0.1.99",
    "fire>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "dicomplete:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dicomplete"]
